--- a/index.html
+++ b/index.html
@@ -41,6 +41,13 @@ let vehicle, vehicleEmoji="🚗", speed=0, turn=0;
 let clock=new THREE.Clock();
 let emojiBuildings=[];
 
+// Station positions
+const stations = {
+  maze: {x:50,z:50},
+  board: {x:-50,z:60},
+  rock: {x:0,z:-70}
+};
+
 init();
 animate();
 
@@ -89,25 +96,31 @@ function init(){
  });
 }
 
-// --- CREATE CITY WITH EMOJI BUILDINGS ---
+// --- CREATE CITY WITH EMOJI BUILDINGS ON GROUND ---
 function createEmojiCity(){
  for(let i=0;i<40;i++){
-   const sprite = makeEmojiSprite("🏙️", 50 + Math.random()*100);
-   sprite.position.set((Math.random()-0.5)*200, sprite.scale.y/2, (Math.random()-0.5)*200);
+   const size = 50 + Math.random()*100;
+   const sprite = makeEmojiSprite("🏙️", size);
+   sprite.position.set((Math.random()-0.5)*200, size/2, (Math.random()-0.5)*200); // Y = half height
    scene.add(sprite);
    emojiBuildings.push(sprite);
  }
 }
 
+// --- MAKE SHARP EMOJI SPRITE ---
 function makeEmojiSprite(emoji, size){
  const canvas = document.createElement('canvas');
- canvas.width=64; canvas.height=64;
- const ctx=canvas.getContext('2d');
- ctx.font="50px Arial"; ctx.textAlign="center"; ctx.textBaseline="middle";
- ctx.fillText(emoji,32,32);
- const texture=new THREE.CanvasTexture(canvas);
- const material=new THREE.SpriteMaterial({map:texture});
- const sprite=new THREE.Sprite(material);
+ canvas.width = 512; canvas.height = 512;
+ const ctx = canvas.getContext('2d');
+ ctx.font = "400px Arial";
+ ctx.textAlign = "center";
+ ctx.textBaseline = "middle";
+ ctx.fillText(emoji, 256, 256);
+ const texture = new THREE.CanvasTexture(canvas);
+ texture.minFilter = THREE.LinearFilter;
+ texture.magFilter = THREE.LinearFilter;
+ const material = new THREE.SpriteMaterial({map: texture});
+ const sprite = new THREE.Sprite(material);
  sprite.scale.set(size,size,size);
  return sprite;
 }
@@ -129,9 +142,9 @@ function switchVehicle(){
 }
 
 // --- HUB STATIONS ---
-function goMaze(){document.getElementById("gameText").innerText="🧩 Entering Maze... (placeholder)";}
-function goBoard(){document.getElementById("gameText").innerText="♟️ Entering Board Games... (placeholder)";}
-function goStage(){document.getElementById("gameText").innerText="🎸 Entering Rock Stage... AI drums/piano placeholder";}
+function goMaze(){document.getElementById("gameText").innerText="🧩 Entering Maze at coordinates "+stations.maze.x+", "+stations.maze.z;}
+function goBoard(){document.getElementById("gameText").innerText="♟️ Entering Board Games at coordinates "+stations.board.x+", "+stations.board.z;}
+function goStage(){document.getElementById("gameText").innerText="🎸 Entering Rock Stage at coordinates "+stations.rock.x+", "+stations.rock.z;}
 function backHub(){document.getElementById("gameText").innerText="🏙️ Back to Hub";}
 
 // --- ANIMATE ---
@@ -159,3 +172,4 @@ function animate(){
 </script>
 </body>
 </html>
+
