--- a/index.html
+++ b/index.html
@@ -22,9 +22,6 @@ button { font-size:16px; margin:2px; cursor:pointer; }
 <option value="🚀">🚀 Rocket</option>
 </select>
 <button onclick="switchVehicle()">Switch Vehicle</button>
-<button onclick="goMaze()">🧩 Maze</button>
-<button onclick="goBoard()">♟️ Board Games</button>
-<button onclick="goStage()">🎸 Rock Stage</button>
 <button onclick="backHub()">🏙️ Back to Hub</button>
 <br><br>
 Controls: WASD / Arrow Keys
@@ -40,13 +37,13 @@ let scene, camera, renderer;
 let vehicle, vehicleEmoji="🚗", speed=0, turn=0;
 let clock=new THREE.Clock();
 let emojiBuildings=[];
-let inStation = null;
+let currentStation = null;
 
-// Station positions
+// Station positions and areas
 const stations = {
-  maze: {x:50, z:50, radius:5},
-  board: {x:-50, z:60, radius:5},
-  rock: {x:0, z:-70, radius:5}
+  maze: {x:50, z:50, radius:7},
+  board: {x:-50, z:60, radius:7},
+  rock: {x:0, z:-70, radius:7}
 };
 
 init();
@@ -55,7 +52,7 @@ animate();
 // --- INIT FUNCTION ---
 function init(){
  scene = new THREE.Scene();
- scene.background = new THREE.Color(0x87ceeb); // sky
+ scene.background = new THREE.Color(0x87ceeb);
 
  camera = new THREE.PerspectiveCamera(75,window.innerWidth/window.innerHeight,0.1,1000);
  camera.position.set(0,6,10);
@@ -64,7 +61,6 @@ function init(){
  renderer.setSize(window.innerWidth,window.innerHeight);
  document.body.appendChild(renderer.domElement);
 
- // Lights
  scene.add(new THREE.AmbientLight(0xffffff,0.6));
  const sun = new THREE.DirectionalLight(0xffffff,1);
  sun.position.set(10,20,10);
@@ -93,114 +89,7 @@ function init(){
  window.addEventListener("resize", ()=>{
    camera.aspect=window.innerWidth/window.innerHeight;
    camera.updateProjectionMatrix();
-   renderer.setSize(window.innerWidth,window.innerHeight);
- });
-}
+   renderer.setSize(window.innerWidth,window.inner
 
-// --- CREATE CITY WITH EMOJI BUILDINGS ON GROUND ---
-function createEmojiCity(){
- for(let i=0;i<40;i++){
-   const size = 50 + Math.random()*100;
-   const sprite = makeEmojiSprite("🏙️", size);
-   sprite.position.set((Math.random()-0.5)*200, size/2, (Math.random()-0.5)*200); // Y = half height
-   scene.add(sprite);
-   emojiBuildings.push(sprite);
- }
-}
-
-// --- MAKE SHARP EMOJI SPRITE ---
-function makeEmojiSprite(emoji, size){
- const canvas = document.createElement('canvas');
- canvas.width = 512; canvas.height = 512;
- const ctx = canvas.getContext('2d');
- ctx.font = "400px Arial";
- ctx.textAlign = "center";
- ctx.textBaseline = "middle";
- ctx.fillText(emoji, 256, 256);
- const texture = new THREE.CanvasTexture(canvas);
- texture.minFilter = THREE.LinearFilter;
- texture.magFilter = THREE.LinearFilter;
- const material = new THREE.SpriteMaterial({map: texture});
- const sprite = new THREE.Sprite(material);
- sprite.scale.set(size,size,size);
- return sprite;
-}
-
-// --- CREATE VEHICLE ---
-function createVehicle(emoji){
- if(vehicle) scene.remove(vehicle);
- vehicleEmoji=emoji;
- const sprite = makeEmojiSprite(emoji, 10);
- sprite.position.set(0,0.5,0);
- scene.add(sprite);
- vehicle = sprite;
-}
-
-// --- SWITCH VEHICLE ---
-function switchVehicle(){
- const select=document.getElementById("vehicleSelect");
- createVehicle(select.value);
-}
-
-// --- HUB STATIONS ---
-function goMaze(){document.getElementById("gameText").innerText="🧩 Going to Maze...";}
-function goBoard(){document.getElementById("gameText").innerText="♟️ Going to Board Games...";}
-function goStage(){document.getElementById("gameText").innerText="🎸 Going to Rock Stage...";}
-function backHub(){
- inStation = null;
- document.getElementById("gameText").innerText="🏙️ Back to Hub";
-}
-
-// --- ENTER STATION ---
-function enterStation(name){
- if(inStation) return;
- inStation = name;
- switch(name){
-   case "maze": document.getElementById("gameText").innerText="🧩 You entered the Maze!"; break;
-   case "board": document.getElementById("gameText").innerText="♟️ You entered Board Games!"; break;
-   case "rock": document.getElementById("gameText").innerText="🎸 You entered Rock Stage!"; break;
- }
-}
-
-// --- CHECK IF VEHICLE IS NEAR STATION ---
-function checkStations(){
-  if(inStation) return;
-  for(const [name, s] of Object.entries(stations)){
-    const dx = vehicle.position.x - s.x;
-    const dz = vehicle.position.z - s.z;
-    const distance = Math.sqrt(dx*dx + dz*dz);
-    if(distance < s.radius){
-      enterStation(name);
-    }
-  }
-}
-
-// --- ANIMATE ---
-function animate(){
- requestAnimationFrame(animate);
- let delta = clock.getDelta();
-
- vehicle.rotation.y += turn;
- vehicle.position.x += Math.sin(vehicle.rotation.y)*speed;
- vehicle.position.z += Math.cos(vehicle.rotation.y)*speed;
-
- // Camera follow behind vehicle
- camera.position.lerp(
-   new THREE.Vector3(
-     vehicle.position.x + Math.sin(vehicle.rotation.y)*15,
-     6,
-     vehicle.position.z + Math.cos(vehicle.rotation.y)*15
-   ), 0.1
- );
- camera.lookAt(vehicle.position);
-
- checkStations(); // check if we entered a station
-
- renderer.render(scene,camera);
-}
-
-</script>
-</body>
-</html>
 
 
