--- a/index.html
+++ b/index.html
@@ -29,64 +29,168 @@ Controls: WASD / Arrow Keys
 <div id="gameText">🏙️ Welcome to Beta Games!</div>
 
 <script src="https://cdn.jsdelivr.net/npm/three@0.157/build/three.min.js"></script>
-
 <script>
 
 // --- CORE THREE.JS SETUP ---
 let scene, camera, renderer;
 let vehicle, vehicleEmoji="🚗", speed=0, turn=0;
-let clock=new THREE.Clock();
+let clock = new THREE.Clock();
 let emojiBuildings=[];
 let currentStation = null;
 
-// Station positions and areas
+// Station positions and radius
 const stations = {
   maze: {x:50, z:50, radius:7},
   board: {x:-50, z:60, radius:7},
   rock: {x:0, z:-70, radius:7}
 };
 
+// Initialize scene
 init();
 animate();
 
-// --- INIT FUNCTION ---
 function init(){
- scene = new THREE.Scene();
- scene.background = new THREE.Color(0x87ceeb);
+  scene = new THREE.Scene();
+  scene.background = new THREE.Color(0x87ceeb);
 
- camera = new THREE.PerspectiveCamera(75,window.innerWidth/window.innerHeight,0.1,1000);
- camera.position.set(0,6,10);
+  camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
+  camera.position.set(0,6,10);
 
- renderer = new THREE.WebGLRenderer({antialias:true});
- renderer.setSize(window.innerWidth,window.innerHeight);
- document.body.appendChild(renderer.domElement);
+  renderer = new THREE.WebGLRenderer({antialias:true});
+  renderer.setSize(window.innerWidth, window.innerHeight);
+  document.body.appendChild(renderer.domElement);
 
- scene.add(new THREE.AmbientLight(0xffffff,0.6));
- const sun = new THREE.DirectionalLight(0xffffff,1);
- sun.position.set(10,20,10);
- scene.add(sun);
+  scene.add(new THREE.AmbientLight(0xffffff,0.6));
+  const sun = new THREE.DirectionalLight(0xffffff,1);
+  sun.position.set(10,20,10);
+  scene.add(sun);
 
- // Ground
- const ground = new THREE.Mesh(
-   new THREE.PlaneGeometry(500,500),
-   new THREE.MeshStandardMaterial({color:0x444444})
- );
- ground.rotation.x = -Math.PI/2;
- scene.add(ground);
+  // Ground
+  const ground = new THREE.Mesh(
+    new THREE.PlaneGeometry(500,500),
+    new THREE.MeshStandardMaterial({color:0x444444})
+  );
+  ground.rotation.x = -Math.PI/2;
+  scene.add(ground);
 
- createEmojiCity();
- createVehicle(vehicleEmoji);
+  createEmojiCity();
+  createVehicle(vehicleEmoji);
 
- // Keyboard controls
- document.addEventListener("keydown", e=>{switch(e.code){
-   case "ArrowUp": case "KeyW": speed=0.5; break;
-   case "ArrowDown": case "KeyS": speed=-0.3; break;
-   case "ArrowLeft": case "KeyA": turn=0.05; break;
-   case "ArrowRight": case "KeyD": turn=-0.05; break;
- }});
- document.addEventListener("keyup",()=>{speed=0; turn=0;});
+  document.addEventListener("keydown", e=>{switch(e.code){
+    case "ArrowUp": case "KeyW": speed=0.5; break;
+    case "ArrowDown": case "KeyS": speed=-0.3; break;
+    case "ArrowLeft": case "KeyA": turn=0.05; break;
+    case "ArrowRight": case "KeyD": turn=-0.05; break;
+  }});
+  document.addEventListener("keyup", ()=>{speed=0; turn=0;});
 
- window.addEventListener("resize", ()=>{
-   camera.aspect=window.innerWidth/window.innerHeight;
-   camera.updateProjectionMatrix();
-   renderer.setSize(window.innerWidth,window.inner
+  window.addEventListener("resize", ()=>{
+    camera.aspect=window.innerWidth/window.innerHeight;
+    camera.updateProjectionMatrix();
+    renderer.setSize(window.innerWidth,window.innerHeight);
+  });
+}
+
+// --- CREATE CITY ---
+function createEmojiCity(){
+  for(let i=0;i<40;i++){
+    const size = 50 + Math.random()*100;
+    const sprite = makeEmojiSprite("🏙️", size);
+    sprite.position.set((Math.random()-0.5)*200, size/2, (Math.random()-0.5)*200);
+    scene.add(sprite);
+    emojiBuildings.push(sprite);
+  }
+}
+
+// --- MAKE EMOJI SPRITE ---
+function makeEmojiSprite(emoji, size){
+  const canvas = document.createElement('canvas');
+  canvas.width = 512; canvas.height = 512;
+  const ctx = canvas.getContext('2d');
+  ctx.font = "400px Arial";
+  ctx.textAlign = "center";
+  ctx.textBaseline = "middle";
+  ctx.fillText(emoji, 256, 256);
+  const texture = new THREE.CanvasTexture(canvas);
+  texture.minFilter = THREE.LinearFilter;
+  texture.magFilter = THREE.LinearFilter;
+  const material = new THREE.SpriteMaterial({map: texture});
+  const sprite = new THREE.Sprite(material);
+  sprite.scale.set(size,size,size);
+  return sprite;
+}
+
+// --- CREATE VEHICLE ---
+function createVehicle(emoji){
+  if(vehicle) scene.remove(vehicle);
+  vehicleEmoji = emoji;
+  const sprite = makeEmojiSprite(emoji, 10);
+  sprite.position.set(0,0.5,0);
+  scene.add(sprite);
+  vehicle = sprite;
+}
+
+// --- SWITCH VEHICLE ---
+function switchVehicle(){
+  const select=document.getElementById("vehicleSelect");
+  createVehicle(select.value);
+}
+
+// --- ENTER STATION ---
+function enterStation(name){
+  if(currentStation) return;
+  currentStation = name;
+  switch(name){
+    case "maze": document.getElementById("gameText").innerText="🧩 You entered the Maze!"; break;
+    case "board": document.getElementById("gameText").innerText="♟️ You entered Board Games!"; break;
+    case "rock": document.getElementById("gameText").innerText="🎸 You entered Rock Stage!"; break;
+  }
+}
+
+// --- BACK TO HUB ---
+function backHub(){
+  currentStation = null;
+  vehicle.position.set(0,0.5,0);
+  document.getElementById("gameText").innerText="🏙️ Back to Hub";
+}
+
+// --- CHECK STATIONS ---
+function checkStations(){
+  if(currentStation) return;
+  for(const [name,s] of Object.entries(stations)){
+    const dx = vehicle.position.x - s.x;
+    const dz = vehicle.position.z - s.z;
+    const distance = Math.sqrt(dx*dx + dz*dz);
+    if(distance < s.radius){
+      enterStation(name);
+    }
+  }
+}
+
+// --- ANIMATE ---
+function animate(){
+  requestAnimationFrame(animate);
+  let delta = clock.getDelta();
+
+  vehicle.rotation.y += turn;
+  vehicle.position.x += Math.sin(vehicle.rotation.y)*speed;
+  vehicle.position.z += Math.cos(vehicle.rotation.y)*speed;
+
+  // Camera follow
+  camera.position.lerp(
+    new THREE.Vector3(
+      vehicle.position.x + Math.sin(vehicle.rotation.y)*15,
+      6,
+      vehicle.position.z + Math.cos(vehicle.rotation.y)*15
+    ), 0.1
+  );
+  camera.lookAt(vehicle.position);
+
+  checkStations();
+
+  renderer.render(scene,camera);
+}
+
+</script>
+</body>
+</html>
