--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@ button { font-size:16px; margin:2px; cursor:pointer; }
 <div id="ui">
 <select id="vehicleSelect">
 <option value="🚗">🚗 Car</option>
-<option value="🚕">🚕 Car</option>
-<option value="🚙">🚙 Car</option>
 <option value="✈️">✈️ Plane</option>
 <option value="🚀">🚀 Rocket</option>
 </select>
@@ -35,26 +33,26 @@ Controls: WASD / Arrow Keys
 let scene, camera, renderer;
 let vehicle, vehicleEmoji="🚗", speed=0, turn=0;
 let clock = new THREE.Clock();
-let emojiBuildings=[];
+let emojiBuildings = [];
 let currentStation = null;
 
-// Station positions and radius
+// Stations coordinates
 const stations = {
   maze: {x:50, z:50, radius:7},
   board: {x:-50, z:60, radius:7},
   rock: {x:0, z:-70, radius:7}
 };
 
-// Initialize scene
 init();
 animate();
 
+// --- INIT ---
 function init(){
   scene = new THREE.Scene();
   scene.background = new THREE.Color(0x87ceeb);
 
   camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
-  camera.position.set(0,6,10);
+  camera.position.set(0,6,15);
 
   renderer = new THREE.WebGLRenderer({antialias:true});
   renderer.setSize(window.innerWidth, window.innerHeight);
@@ -93,8 +91,8 @@ function init(){
 
 // --- CREATE CITY ---
 function createEmojiCity(){
-  for(let i=0;i<40;i++){
-    const size = 50 + Math.random()*100;
+  for(let i=0;i<20;i++){
+    const size = 50 + Math.random()*50;
     const sprite = makeEmojiSprite("🏙️", size);
     sprite.position.set((Math.random()-0.5)*200, size/2, (Math.random()-0.5)*200);
     scene.add(sprite);
@@ -102,25 +100,23 @@ function createEmojiCity(){
   }
 }
 
-// --- MAKE EMOJI SPRITE ---
+// --- EMOJI SPRITE ---
 function makeEmojiSprite(emoji, size){
   const canvas = document.createElement('canvas');
-  canvas.width = 512; canvas.height = 512;
+  canvas.width = 256; canvas.height = 256;
   const ctx = canvas.getContext('2d');
-  ctx.font = "400px Arial";
+  ctx.font = "200px Arial";
   ctx.textAlign = "center";
   ctx.textBaseline = "middle";
-  ctx.fillText(emoji, 256, 256);
+  ctx.fillText(emoji, 128, 128);
   const texture = new THREE.CanvasTexture(canvas);
-  texture.minFilter = THREE.LinearFilter;
-  texture.magFilter = THREE.LinearFilter;
   const material = new THREE.SpriteMaterial({map: texture});
   const sprite = new THREE.Sprite(material);
   sprite.scale.set(size,size,size);
   return sprite;
 }
 
-// --- CREATE VEHICLE ---
+// --- VEHICLE ---
 function createVehicle(emoji){
   if(vehicle) scene.remove(vehicle);
   vehicleEmoji = emoji;
@@ -130,9 +126,8 @@ function createVehicle(emoji){
   vehicle = sprite;
 }
 
-// --- SWITCH VEHICLE ---
 function switchVehicle(){
-  const select=document.getElementById("vehicleSelect");
+  const select = document.getElementById("vehicleSelect");
   createVehicle(select.value);
 }
 
@@ -140,11 +135,15 @@ function switchVehicle(){
 function enterStation(name){
   if(currentStation) return;
   currentStation = name;
+  let text="";
   switch(name){
-    case "maze": document.getElementById("gameText").innerText="🧩 You entered the Maze!"; break;
-    case "board": document.getElementById("gameText").innerText="♟️ You entered Board Games!"; break;
-    case "rock": document.getElementById("gameText").innerText="🎸 You entered Rock Stage!"; break;
+    case "maze": text="🧩 You entered the Maze!"; break;
+    case "board": text="♟️ You entered Board Games!"; break;
+    case "rock": text="🎸 You entered Rock Stage!"; break;
   }
+  document.getElementById("gameText").innerText = text;
+  // Move vehicle to station
+  vehicle.position.set(stations[name].x,0.5,stations[name].z);
 }
 
 // --- BACK TO HUB ---
