--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ button { font-size:16px; margin:2px; cursor:pointer; }
 // --- THREE.JS SETUP ---
 let scene, camera, renderer;
 let vehicle, vehicleGroup;
-let speed=0, turn=0;
+let speed=5, turn=3;
 let clock = new THREE.Clock();
 let currentStation = null;
 
@@ -240,6 +240,7 @@ function animate(){
 
   renderer.render(scene,camera);
 }
+     <buton>platyprot</button>
 
 </script>
 </body>
