--- a/index.html
+++ b/index.html
@@ -1,247 +1,95 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta charset="UTF-8">
-<title>🚘 Beta Games 3D World</title>
-<style>
-body { margin:0; overflow:hidden; background:skyblue; }
-#ui { position:absolute; top:10px; left:10px; color:white; z-index:10;
-     background:rgba(0,0,0,0.6); padding:10px; border-radius:10px; }
-button { font-size:16px; margin:2px; cursor:pointer; }
-#gameText { position:absolute; bottom:10px; left:10px; color:white; font-size:20px; z-index:10; }
-</style>
+  <meta charset="UTF-8">
+  <title>Beta Game – Login</title>
+  <style>
+    body {
+      margin: 0;
+      height: 100vh;
+      background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
+      font-family: Arial, sans-serif;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: white;
+    }
+
+    .login-box {
+      background: rgba(0,0,0,0.6);
+      padding: 30px;
+      border-radius: 15px;
+      width: 320px;
+      text-align: center;
+      box-shadow: 0 0 20px #000;
+    }
+
+    h1 {
+      margin: 5px 0;
+      font-size: 28px;
+    }
+
+    h2 {
+      margin: 5px 0 20px;
+      font-size: 18px;
+      color: #00e5ff;
+    }
+
+    img {
+      width: 280px;
+      border-radius: 10px;
+      margin-bottom: 15px;
+    }
+
+    input {
+      width: 90%;
+      padding: 10px;
+      margin: 10px 0;
+      border-radius: 8px;
+      border: none;
+      font-size: 16px;
+    }
+
+    button {
+      width: 95%;
+      padding: 10px;
+      border-radius: 8px;
+      border: none;
+      font-size: 16px;
+      cursor: pointer;
+      background: #00e5ff;
+      color: black;
+      font-weight: bold;
+    }
+
+    button:hover {
+      background: #00bcd4;
+    }
+  </style>
 </head>
 <body>
-<div id="ui">
-<button onclick="backHub()">🏙️ Back to Hub</button>
-<br>Controls: WASD / Arrow Keys
-</div>
-<div id="gameText">🏙️ Welcome to Beta Games!</div>
 
-<script src="https://cdn.jsdelivr.net/npm/three@0.157/build/three.min.js"></script>
-<script>
+  <div class="login-box">
+    <h1>Website</h1>
+    <h2>Beta Game</h2>
 
-// --- THREE.JS SETUP ---
-let scene, camera, renderer;
-let vehicle, vehicleGroup;
-let speed=5, turn=3;
-let clock = new THREE.Clock();
-let currentStation = null;
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQofczx-zaZw7J3zNj0dStl-d0OvWi1LTY7Kw&s">
 
-// Hub and stations
-const hubPos = {x:0, z:0};
-const stations = {
-  chess: {x:80, z:0, radius:7},
-  rock: {x:-80, z:50, radius:7}
-};
+    <input id="username" placeholder="Enter username">
+    <button onclick="login()">Login</button>
+  </div>
 
-init();
-animate();
-
-// --- INIT ---
-function init(){
-  scene = new THREE.Scene();
-  scene.background = new THREE.Color(0x87ceeb);
-
-  camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
-  camera.position.set(0,6,15);
-
-  renderer = new THREE.WebGLRenderer({antialias:true});
-  renderer.setSize(window.innerWidth, window.innerHeight);
-  document.body.appendChild(renderer.domElement);
-
-  scene.add(new THREE.AmbientLight(0xffffff,0.6));
-  const sun = new THREE.DirectionalLight(0xffffff,1);
-  sun.position.set(10,20,10);
-  scene.add(sun);
-
-  // Ground
-  const ground = new THREE.Mesh(
-    new THREE.PlaneGeometry(500,500),
-    new THREE.MeshStandardMaterial({color:0x444444})
-  );
-  ground.rotation.x = -Math.PI/2;
-  scene.add(ground);
-
-  createCity();
-  createVehicle();
-  createChessArea();
-  createRockStage();
-
-  document.addEventListener("keydown", e=>{
-    switch(e.code){
-      case "ArrowUp": case "KeyW": speed=0.5; break;
-      case "ArrowDown": case "KeyS": speed=-0.3; break;
-      case "ArrowLeft": case "KeyA": turn=0.05; break;
-      case "ArrowRight": case "KeyD": turn=-0.05; break;
-    }
-  });
-  document.addEventListener("keyup", ()=>{speed=0; turn=0;});
-
-  window.addEventListener("resize", ()=>{
-    camera.aspect = window.innerWidth/window.innerHeight;
-    camera.updateProjectionMatrix();
-    renderer.setSize(window.innerWidth, window.innerHeight);
-  });
-}
-
-// --- CITY ---
-function createCity(){
-  for(let i=0;i<20;i++){
-    const h = 10 + Math.random()*30;
-    const b = 5 + Math.random()*10;
-    const box = new THREE.Mesh(
-      new THREE.BoxGeometry(b,h,b),
-      new THREE.MeshStandardMaterial({color:0x888888})
-    );
-    box.position.set((Math.random()-0.5)*200,h/2,(Math.random()-0.5)*200);
-    scene.add(box);
-    // add windows
-    const winMat = new THREE.MeshStandardMaterial({color:0xffff00});
-    for(let y=1;y<h;y+=3){
-      for(let x=-b/2+1;x<b/2;x+=2){
-        const w = new THREE.Mesh(new THREE.BoxGeometry(0.8,0.8,0.1), winMat);
-        w.position.set(box.position.x + x, y, box.position.z + b/2 + 0.05);
-        scene.add(w);
+  <script>
+    function login() {
+      const user = document.getElementById("username").value;
+      if (user.trim() === "") {
+        alert("Please enter a username");
+        return;
       }
+      localStorage.setItem("player", user);
+      window.location.href = "game.html";
     }
-  }
-}
+  </script>
 
-// --- VEHICLE ---
-function createVehicle(){
-  vehicleGroup = new THREE.Group();
-
-  // Body
-  const bodyMat = new THREE.MeshStandardMaterial({color:0xff0000});
-  const body = new THREE.Mesh(new THREE.BoxGeometry(4,1.5,2), bodyMat);
-  body.position.y=1;
-  vehicleGroup.add(body);
-
-  // Windows (flat rectangles)
-  const winMat = new THREE.MeshStandardMaterial({color:0x00ffff});
-  const winFront = new THREE.Mesh(new THREE.BoxGeometry(1.5,0.8,0.05), winMat);
-  winFront.position.set(0,1.5,1.05);
-  vehicleGroup.add(winFront);
-
-  const winBack = new THREE.Mesh(new THREE.BoxGeometry(1.5,0.8,0.05), winMat);
-  winBack.position.set(0,1.5,-1.05);
-  vehicleGroup.add(winBack);
-
-  // Wheels
-  const wheelMat = new THREE.MeshStandardMaterial({color:0x222222});
-  const wheelGeom = new THREE.CylinderGeometry(0.5,0.5,0.5,16);
-  const positions = [
-    [1.5,0.5,1], [-1.5,0.5,1], [1.5,0.5,-1], [-1.5,0.5,-1]
-  ];
-  positions.forEach(p=>{
-    const w = new THREE.Mesh(wheelGeom, wheelMat);
-    w.rotation.z = Math.PI/2;
-    w.position.set(...p);
-    vehicleGroup.add(w);
-  });
-
-  vehicleGroup.position.set(hubPos.x,0,hubPos.z);
-  scene.add(vehicleGroup);
-}
-
-// --- CHESS AREA ---
-function createChessArea(){
-  const boardSize = 8;
-  const squareSize = 2;
-  for(let i=0;i<boardSize;i++){
-    for(let j=0;j<boardSize;j++){
-      const color = (i+j)%2===0?0xffffff:0x000000;
-      const square = new THREE.Mesh(
-        new THREE.BoxGeometry(squareSize,0.2,squareSize),
-        new THREE.MeshStandardMaterial({color})
-      );
-      square.position.set(stations.chess.x + i*squareSize,0.1,stations.chess.z + j*squareSize);
-      scene.add(square);
-    }
-  }
-}
-
-// --- ROCK STAGE ---
-function createRockStage(){
-  const stage = new THREE.Mesh(
-    new THREE.BoxGeometry(12,1,8),
-    new THREE.MeshStandardMaterial({color:0x333333})
-  );
-  stage.position.set(stations.rock.x,0.5,stations.rock.z);
-  scene.add(stage);
-
-  // instruments (emoji planes)
-  const drum = makeEmojiSprite("🥁",3);
-  drum.position.set(stations.rock.x+2,1.5,stations.rock.z);
-  scene.add(drum);
-  const guitar = makeEmojiSprite("🎸",3);
-  guitar.position.set(stations.rock.x-2,1.5,stations.rock.z);
-  scene.add(guitar);
-}
-
-// --- EMOJI SPRITE ---
-function makeEmojiSprite(emoji,size){
-  const canvas = document.createElement('canvas');
-  canvas.width=256; canvas.height=256;
-  const ctx=canvas.getContext('2d');
-  ctx.font="200px Arial";
-  ctx.textAlign="center";
-  ctx.textBaseline="middle";
-  ctx.fillText(emoji,128,128);
-  const tex=new THREE.CanvasTexture(canvas);
-  const mat=new THREE.SpriteMaterial({map:tex});
-  const sprite=new THREE.Sprite(mat);
-  sprite.scale.set(size,size,size);
-  return sprite;
-}
-
-// --- BACK TO HUB ---
-function backHub(){
-  currentStation = null;
-  vehicleGroup.position.set(hubPos.x,0,hubPos.z);
-  document.getElementById("gameText").innerText="🏙️ Back to Hub";
-}
-
-// --- CHECK STATIONS ---
-function checkStations(){
-  if(currentStation) return;
-  for(const [name,s] of Object.entries(stations)){
-    const dx = vehicleGroup.position.x - s.x;
-    const dz = vehicleGroup.position.z - s.z;
-    const distance = Math.sqrt(dx*dx + dz*dz);
-    if(distance < s.radius){
-      currentStation=name;
-      document.getElementById("gameText").innerText = name==="chess"?"♔♚ Chess Area":"🎸 Rock Stage";
-    }
-  }
-}
-
-// --- ANIMATE ---
-function animate(){
-  requestAnimationFrame(animate);
-  const delta = clock.getDelta();
-
-  vehicleGroup.rotation.y += turn;
-  vehicleGroup.position.x += Math.sin(vehicleGroup.rotation.y)*speed;
-  vehicleGroup.position.z += Math.cos(vehicleGroup.rotation.y)*speed;
-
-  // Camera follow
-  camera.position.lerp(
-    new THREE.Vector3(
-      vehicleGroup.position.x + Math.sin(vehicleGroup.rotation.y)*15,
-      6,
-      vehicleGroup.position.z + Math.cos(vehicleGroup.rotation.y)*15
-    ), 0.1
-  );
-  camera.lookAt(vehicleGroup.position);
-
-  checkStations();
-
-  renderer.render(scene,camera);
-}
-     <buton>platyprot</button>
-
-</script>
 </body>
 </html>
